INTYG-4086: WiP, patient hämtas nu enlig grundläggande regelverk för intygstyp, namn/address sparas ej undan för FK-intyg etc. Protractor grönt